git# This is a combination of 2 commits.
Refactoring footer-button and removing jQuery

--- a/cfgov/jinja2/v1/_includes/organisms/footer.html
+++ b/cfgov/jinja2/v1/_includes/organisms/footer.html
@@ -21,10 +21,10 @@
 
             <a class="btn
                       btn__secondary
-                      js-return-to-top
                       o-footer_top-button"
-               href="#">
-                Back to top <span class="cf-icon cf-icon-arrow-up"></span>
+                data-js-hook="behavior_return-to-top"
+                href="#">
+                Back to top <span clasbs="cf-icon cf-icon-arrow-up"></span>
             </a>
 
             <ul class="o-footer_nav-list">
