--- a/cfgov/unprocessed/css/organisms/mega-menu.less
+++ b/cfgov/unprocessed/css/organisms/mega-menu.less
@@ -143,70 +143,71 @@
     - cfgov-organisms
 */
 
+// Base Level styles
 .o-mega-menu {
-    &_content-item {
-        // Override margin added by CF to list items.
-        margin-bottom: 0;
+
+    &_content-link,
+    &_content-overview-link {
+        .u-link__colors( @pacific, @pacific, @pacific-60, @pacific, @dark-navy );
+
+
+        cursor: pointer;
+        display: block;
     }
 
-    // 1st-level menu.
-    &_content-1 {
-        &-link {
-            // Colors for :link, :visited, :hover, :focus, :active.
-            .u-link__colors( @black );
+    &_content-overview-link {
+        display: block;
 
-            display: block;
+        padding-left: 15px;
+        padding-right: 15px;
+        border-bottom: 1px solid @gray-40;
+
+        &:hover,
+        &:focus,
+        &:visited {
+            border-bottom-color: @gray-40;
         }
+
+        // ------------------------------------------------------------
+        // TODO: Remove when Consumer Tools and Education Resources
+        //       have overview pages post-launch.
+        //       This is temporary code to override diabled link styles
+        &.u-link__disabled {
+            border-bottom: 1px solid !important;
+        }
+        // ------------------------------------------------------------
     }
+}
 
-    // 2nd and 3rd-level menus.
-    &_content-2,
-    &_content-3 {
-        &-overview {
-            display: block;
-            border-bottom: 1px solid @gray-40;
-        }
+// Offscreen Menu
+.o-mega-menu__offscreen {
+    left: 0;
+    position: absolute;
 
-        &-link,
-        &-overview-link {
-            // Colors for :link, :visited, :hover, :focus, :active.
-            .u-link__colors( @pacific, @black );
+    width: 100%;
 
-            display: block;
-        }
-    }
-
-    // Mobile sizes.
-    .respond-to-max( @bp-xs-max, {
-        &_trigger {
-            margin-left: -15px;
-        }
-    } );
-
-    // Tablet sizes.
-    .respond-to-range( @bp-sm-min, @bp-sm-max, {
-        &_trigger {
-            margin-left: -30px;
-        }
+    // Desktop and above sizes.
+    .respond-to-min( @bp-med-min, {
+        // Completely hide the offscreen menu at large screen sizes
+        display: none;
     } );
 
     // Tablet/mobile sizes.
     .respond-to-max( @bp-sm-max, {
-        &_trigger {
+        .o-mega-menu_trigger {
             display: none;
+            position: absolute;
+            top: -@mobile_trigger_ht__px;
+            z-index: 20;
+
             height: unit( @mobile_trigger_ht__px / 18px, em );
             min-width: unit( @mobile_trigger_ht__px / 18px, em );
             padding-top: unit( @grid_gutter-width / 2 / 18px, em );
             padding-bottom: unit( @grid_gutter-width / 2 / 18px, em );
-
-            position: absolute;
-            top: 0;
-            z-index: 20;
-
-            background: @white;
             border: none;
             border-right: 1px solid @gray-40;
-            color: @black;
+
+            background: @white;
             font-size: unit( 18px / @base-font-size-px, em );
 
             .js & {
@@ -219,18 +220,19 @@
 
             &:before {
                 .cf-icon();
+
                 content: @cf-icon-menu;
                 font-size: unit( 20px / 18px, em );
             }
 
             &[aria-expanded="true"] {
-                background: @gray-10;
                 border-left: 1px solid @gray-40;
-                border-right: 1px solid @gray-40;
-                color: @black;
+
+                background: @gray-10;
 
                 &:before {
                     .cf-icon();
+
                     content: @cf-icon-delete;
                 }
             }
@@ -238,41 +240,35 @@
 
         // Menu flyout.
         // All menus - Tablet/Mobile.
-        &_content {
+        .o-mega-menu_content {
             display: none;
+
             box-sizing: border-box;
             width: 100%;
+            border-top: 1px solid @gray-40;
+            border-bottom: 1px solid @gray-40;
+
+            background-color: @gray-5;
+
+            .u-drop-shadow-after();
 
             .js & {
                 display: block;
                 position: absolute;
-                left: 0;
-                top: -1px;
                 z-index: 10;
-            }
-
-            background-color: @gray-5;
-            border-top: 1px solid @gray-40;
-            border-bottom: 1px solid @gray-40;
-
-            .u-drop-shadow-after();
-
-            &[aria-expanded="true"] {
-                display: block;
             }
 
             &-alt-trigger {
                 .webfont-medium();
 
-                padding: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
-                width: 100%;
-
                 display: block;
-                position: relative;
 
-                background-color: @gray-10;
+                width: 100%;
+                padding: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
                 border: none;
                 border-bottom: 1px solid @gray-40;
+
+                background-color: @gray-10;
                 text-align: left;
                 text-transform: uppercase;
 
@@ -291,84 +287,53 @@
 
             &-overview {
                 display: block;
+
+                padding-right: @grid_gutter-width / 2;
+                padding-left: @grid_gutter-width / 2;
                 border-bottom: 1px solid @gray-40;
             }
 
             // Adjust padding and margin on unordered list menu items
             // above the global eyebrow.
             &-list {
+                padding-right: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
                 padding-left: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
                 margin-bottom: 0;
             }
 
-            &-item {
+            &-item:not( :last-child ) {
                 border-bottom: 1px solid @gray-40;
             }
 
             &-link,
             &-overview-link {
                 position: relative;
-                // Colors for :link, :visited, :hover, :focus, :active.
-                .u-link__colors( @pacific, @pacific, @pacific-60, @pacific, @dark-navy );
 
                 padding-top: @grid_gutter-width / 2;
-                padding-right: @grid_gutter-width / 2;
                 padding-bottom: @grid_gutter-width / 2;
 
                 .js & {
-                    &__has-children:after {
-                        .cf-icon();
+                    &__has-children {
+                        padding-right: @grid_gutter-width / 2;
 
-                        position: absolute;
-                        right: 0;
-                        top: 50%;
-                        transform: translateY( -50% );
+                        &:after {
+                            .cf-icon();
 
-                        color: @green;
-                        content: @cf-icon-right;
+                            position: absolute;
+                            right: 0;
+                            top: 50%;
+                            transform: translateY( -50% );
+
+                            color: @green;
+                            content: @cf-icon-right;
+                        }
                     }
-                }
-
-                &__current,
-                &:hover {
-                    cursor: pointer;
-                }
-            }
-        }
-
-        // 1st-level menu - Tablet/Mobile.
-        &_content-1 {
-            .js & {
-                // Offset for height of trigger button.
-                top: @mobile_trigger_ht__px;
-            }
-            display: block;
-
-            &-list {
-                padding-right: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
-            }
-
-            // Remove final border line of last list item.
-            &-list:last-child {
-                .o-mega-menu_content-1-item:last-child {
-                    border-bottom: none;
-                }
-            }
-
-            // TODO: Remove when Consumer Tools and Ed Resources links are in.
-            // Overrides disabled link styles.
-            &-link.u-link__disabled {
-                color: @pacific !important;
-
-                &:hover {
-                    color: @pacific-60 !important;
-                    cursor: pointer !important;
                 }
             }
         }
 
         // 2nd-level menu - Tablet/Mobile.
-        &_content-2 {
+        .o-mega-menu_content-2 {
 
             // TODO: Enable or delete when non-clickable
             //       current page link is in.
@@ -384,67 +349,38 @@
             //        cursor: default;
             //    }
             // }
-
-            // Remove final border line of last list item.
-            &-list:last-child {
-                .o-mega-menu_content-2-item:last-child {
-                    border-bottom: none;
-                }
-            }
-        }
-
-        // 3rd-level menu - Tablet/Mobile.
-        &_content-3 {
-            // TODO: There is similar code set on all three menus.
-            //       Investigate if it can be combined.
-            // Remove final border line of last list item.
-            &-list:last-child {
-                .o-mega-menu_content-3-item:last-child {
-                    border-bottom: none;
-                }
-            }
         }
 
         // Submenus - Tablet/Mobile.
-        &_content-2,
-        &_content-3 {
+        .o-mega-menu_content-2,
+        .o-mega-menu_content-3 {
             .u-move-right();
+
             position: absolute;
-            left: 0;
             top: -1px;
+            left: 0;
             z-index: 10;
 
-            &-grid {
-                padding-left: unit( @grid_gutter-width / 2 / 18px, em );
-                padding-right: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
+            &-list {
+                padding-left: @grid_gutter-width;
             }
         }
+    } );
+}
+
+// Dropdown menu
+.o-mega-menu__dropdown {
+    // Sizes up to Desktop.
+    .respond-to-max( @bp-sm-max, {
+        display: none;
     } );
 
     // Desktop sizes.
     .respond-to-min( @bp-med-min, {
-
-        &_trigger {
-            display: none;
-        }
-
         // 1st-level menu - Desktop.
-        &_content-1 {
-            &[aria-expanded="true"] {
-                .o-mega-menu_content-1-wrapper {
-                    display: block;
-                    transform: translateY( 0 );
-                }
-            }
-
-            &-list {
-                display: inline-block;
-                margin-bottom: 0;
-            }
-
+        .o-mega-menu_content-1 {
             &-item {
                 display: inline-block;
-                margin-right: unit( 25px / @base-font-size-px, em );
 
                 .no-js &:hover {
                     .o-mega-menu_content-2 {
@@ -452,53 +388,33 @@
                     }
                 }
 
-                &:last-child {
-                    margin-right: 0;
+                &:not( :last-child ) {
+                    margin-right: unit( 25px / @base-font-size-px, em );
                 }
             }
 
             &-link {
-                padding-bottom: @grid_gutter-width;
-                margin-left: @grid_gutter-width;
+                .u-link__colors( @black );
+
+                // -6px padding offset is to account for the border height.
+                padding-bottom: @grid_gutter-width - 6px;
+                border-bottom: 6px solid transparent;
 
                 font-size: unit( 18px / @base-font-size-px, em );
 
-                &:first-child {
-                    margin-left: 0;
-                }
-
-                // -6px padding offset is to account for the border height.
-                &[aria-expanded="true"],
                 &__current {
-                    padding-bottom: @grid_gutter-width - 6px;
-                    border-bottom: 6px solid @black;
-                    cursor: pointer;
+                    border-bottom-color: @black;
                 }
 
+                &[aria-expanded="true"],
                 &:hover {
-                    padding-bottom: @grid_gutter-width - 6px;
-                    border-bottom: 6px solid @gray-40;
-                    cursor: pointer;
+                    border-bottom-color: @gray-40;
                 }
             }
-
-            // TODO: Remove when Consumer Tools and Ed Resources links are in.
-            // Overrides disabled link styles.
-            &-link.u-link__disabled {
-                color: @black !important;
-
-                &:hover {
-                    padding-bottom: @grid_gutter-width - 6px !important;
-                    border-bottom: 6px solid @gray-40 !important;
-                    cursor: pointer !important;
-                }
-            }
-
         }
 
         // 2nd-level menu - Desktop.
-        &_content-2 {
-            overflow: hidden;
+        .o-mega-menu_content-2 {
             position: absolute;
             left: 0;
             z-index: 10;
@@ -508,39 +424,28 @@
                 display: none;
             }
 
-            &[aria-expanded="true"] {
-
-                .o-mega-menu_content-2-wrapper {
-                    display: block;
-                }
-            }
-
             &-wrapper {
                 background-color: @gray-5;
                 border-top: 1px solid @gray-40;
                 border-bottom: 1px solid @gray-40;
+                padding-top: unit( @grid_gutter-width / @base-font-size-px, em );
+                padding-bottom: unit( @grid_gutter-width / @base-font-size-px, em );
 
                 .u-drop-shadow-after();
-
-                // Adjustments to CF-wrapper.
-                // TODO: Investigate applying adjustment to CF directly,
-                //       or copying values here.
-                .wrapper {
-                    padding: unit( @grid_gutter-width / @base-font-size-px, em );
-                    padding-left: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
-                    padding-right: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
-                }
+                 margin-bottom: 5px;
             }
 
-            &-alt-trigger {
-                display: none;
+            &-col-group {
+                .grid_nested-col-group();
+            }
+
+            &-grid {
+                .grid_column( 12 );
             }
 
             &-overview {
                 padding-bottom: @grid_gutter-width / 2;
-                margin-bottom: unit( @grid_gutter-width / 2 / 18px, em );
-
-                font-size: 1em;
+                margin-bottom: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
 
                 // ------------------------------------------------------------
                 // TODO: Remove when Consumer Tools and Education Resources
@@ -558,7 +463,7 @@
             }
 
             &-list {
-                .grid_column(4);
+                .grid_column( 4 );
             }
 
             &-link {
@@ -567,6 +472,7 @@
                 padding-left: unit( 15px / 18px, em );
 
                 border-left: 5px solid transparent;
+
                 font-size: unit( 18px / @base-font-size-px, em );
             }
 
@@ -580,49 +486,37 @@
                 }
             }
         }
-
-        // 3rd-level menu - Desktop.
-        &_content-3 {
-            display: none;
-        }
-
-        // Hide global header CTA container and eyebrow at desktop size.
-        &_content-1-item:first-child,
-        .m-global-eyebrow {
-            display: none;
-        }
     } );
 
     // Large desktop size.
     .respond-to-min( @bp-lg-min, {
-
-        &_content-1 {
-            &-item {
+        // 1st-level menu - Large desktop.
+        .o-mega-menu_content-1 {
+            &-item:not( :last-child ) {
                 margin-right: @grid_gutter-width * 1.5;
             }
         }
+
         // 2nd-level menu - Large desktop.
-         &_content-2 {
+        .o-mega-menu_content-2 {
             &-grid {
                 .grid_column( 8 );
-                // TODO: Check if .grid_nested-col-group()
-                //       can be used here when implementing Featured Menu Content.
-                border-left: 0;
             }
         }
     } );
 
     // Xtra-Large desktop size.
     .respond-to-min( @bp-xl-min, {
-
-        &_content-1 {
-            &-item {
+        // 1st-level menu - Xtra-Large desktop.
+        .o-mega-menu_content-1 {
+            &-item:not( :last-child ) {
                 margin-right: @grid_gutter-width * 2;
             }
         }
     } );
 }
 
+/*
 .o-mega-menu {
     // Tab trigger is used to capture press of the tab key so that
     // global search can be collapsed when it hits this element.
@@ -632,18 +526,20 @@
         left: -9999px;
     }
 }
+*/
 
 .no-js .o-mega-menu {
     // JS isn't available to remove u-hidden class, so override it.
+    // This may only be necessary for small screens
     &.u-hidden {
-      display: block;
+        display: block;
     }
 }
 
 // Hide on print.
 .respond-to-print( {
     .o-mega-menu {
-        display: none;
+        display: none !important;
     }
 } );
 
