--- a/cfgov/jinja2/v1/_includes/organisms/mega-menu_offscreen.html
+++ b/cfgov/jinja2/v1/_includes/organisms/mega-menu_offscreen.html
@@ -175,5 +175,5 @@
     {# Create a root menu at depth one.
        This is the 1st level of a 3-level menu. #}
     {{ _nav( 1, vars.nav_items ) }}
-    {#<button class="{{ base_class ~ '_tab-trigger' }}" aria-hidden="true"></button>#}
+    <button class="{{ base_class ~ '_tab-trigger' }}" aria-hidden="true"></button>
 </nav>
