--- a/cfgov/jinja2/v1/_includes/organisms/header.html
+++ b/cfgov/jinja2/v1/_includes/organisms/header.html
@@ -90,7 +90,7 @@
             </a>
 
             {% block primary_nav %}
-                {#{% include 'organisms/mega-menu_offscreen.html' with context %}#}
+                {% include 'organisms/mega-menu_offscreen.html' with context %}
                 {% include 'organisms/mega-menu_dropdown.html' with context %}
             {% endblock primary_nav %}
         </div>
