Updates pagination to support on-demand generation + stepper

--- a/cfgov/jinja2/v1/_includes/on-demand/secondary-navigation.html
+++ b/cfgov/jinja2/v1/_includes/on-demand/secondary-navigation.html
@@ -1,7 +1,7 @@
 {# ==========================================================================
 
-   Render secondary navigation, for use in the global_include used
-   in non-V1 projects.
+   Render secondary navigation, for use in
+   test-fixture/?atomic=secondary-navigation used in non-V1 projects.
 
    ========================================================================== #}
 
