--- a/cfgov/jinja2/v1/_includes/molecules/pagination.html
+++ b/cfgov/jinja2/v1/_includes/molecules/pagination.html
@@ -1,7 +1,7 @@
 
 {# ==========================================================================
 
-   Pagination
+   pagination.render()
 
    ==========================================================================
 
@@ -9,57 +9,82 @@
 
    Builds pagination markup when given:
 
-   posts:                        TODO: fill in data type and description.
+   total_pages: Total number of pages.
 
-   posts.paginator:              TODO: fill in data type and description.
+   curr_page:   Currently selected page (out of the total).
 
-   posts.paginator.num_pages:    Number of total pages.
+   is_stepper:  Whether the pagination is a stepper, meaning the user can not
+                jump to a page, but must sequentially work through the pages.
+                Default is false.
 
-   posts.number:                 TODO: fill in data type and description.
+   fragment_id: The fragment identifier attached
+                to the prev/next pagination buttons.
+                Default is empty string.
 
-   posts.previous_page_number(): Method to return previous page number.
-
-   posts.page:                   Current page number of the iterable list.
+   index:       A unique number given to render the form and its fields with.
+                Default is 0.
 
    ========================================================================== #}
 
-{% if posts and posts.paginator.num_pages > 1 %}
+{% macro render(total_pages, curr_page, is_stepper=false, fragment_id='', index=0) %}
+{% if total_pages > 1 and curr_page <= total_pages %}
 {% from 'macros/util/url_parameters.html' import url_parameters %}
-
+{% set fragment_id = '#' + fragment_id if fragment_id else '' %}
     <nav class="m-pagination"
          role="navigation"
          aria-label="Pagination">
-        {%- if posts.number > 1 %}
-        <a class="btn btn__super m-pagination_btn-prev"
-           href="?page={{ posts.previous_page_number()
-                          ~ url_parameters(request.GET)
-                          ~ '#o-filterable-list-controls' }}">
-        {%- else %}
+        {%- if curr_page > 1 %}
+        <a class="btn
+                  btn__super
+                  m-pagination_btn-prev"
+           href="?page={{ (curr_page - 1) ~ url_parameters(request.GET) ~ fragment_id }}">
+        {% else %}
         <a class="btn btn__super
                   btn__disabled
                   m-pagination_btn-prev">
-        {% endif %}
-            <span class="btn_icon__left cf-icon cf-icon-left"></span>
-            Newer
-        </a>
-        {%- if posts.number < posts.paginator.num_pages %}
-        <a class="btn btn__super m-pagination_btn-next"
-           href="?page={{ posts.next_page_number()
-                          ~ url_parameters(request.GET)
-                          ~ '#o-filterable-list-controls' }}">
-        {%- else %}
-        <a class="btn btn__super btn__disabled m-pagination_btn-next">
         {% endif -%}
-            Older
-            <span class="btn_icon__right cf-icon cf-icon-right"></span>
+            <span class="btn_icon__left
+                         cf-icon
+                         cf-icon-left"></span>
+            {%- if is_stepper %}
+            Previous
+            {% else %}
+            Newer
+            {% endif -%}
         </a>
-        <form action="#o-filterable-list-controls">
-            <label for="m-pagination_current-page">
+        {%- if curr_page < total_pages %}
+        <a class="btn
+                  btn__super
+                  m-pagination_btn-next"
+           href="?page={{ (curr_page + 1) ~ url_parameters(request.GET) ~ fragment_id }}">
+        {%- else %}
+        <a class="btn
+                  btn__super
+                  btn__disabled
+                  m-pagination_btn-next">
+        {% endif -%}
+            {%- if is_stepper %}
+            Next
+            {% else %}
+            Older
+            {% endif -%}
+            <span class="btn_icon__right
+                         cf-icon
+                         cf-icon-right"></span>
+        </a>
+        <form action="{{ fragment_id }}">
+            {%- if not is_stepper %}
+            <label for="m-pagination_current-page-{{ index | string }}">
+            {% endif -%}
+                <span class="m-pagination_label">
                 Page
-                <span class="u-visually-hidden">
-                    number out of {{ posts.paginator.num_pages }} total pages
                 </span>
+                <span class="u-visually-hidden">
+                    {{ curr_page }} out of {{ total_pages }} total pages
+                </span>
+            {%- if not is_stepper %}
             </label>
+            {% endif -%}
             {% for (key, value) in request.GET.items() %}
                 {% if value != '' %}
                     <input type="hidden"
@@ -67,22 +92,33 @@
                            value="{{ value }}">
                 {% endif %}
             {% endfor %}
-            <input id="m-pagination_current-page"
+            {%- if is_stepper %}
+            <span class="m-pagination_label">
+            {{ curr_page }}
+            </span>
+            {% else %}
+            <input id="m-pagination_current-page-{{ index | string }}"
+                   class="m-pagination_current-page"
                    name="page"
                    type="number"
                    min="1"
-                   max="{{ posts.paginator.num_pages }}"
+                   max="{{ total_pages }}"
                    pattern="[0-9]*"
                    inputmode="numeric"
-                   value="{{ posts.number }}">
+                   value="{{ curr_page }}">
+            {% endif -%}
             <span class="m-pagination_label">
-                of {{ posts.paginator.num_pages }}
+                of {{ total_pages }}
             </span>
-            <button class="btn btn__link"
-                    id="m-pagination_submit-btn"
+            {%- if not is_stepper %}
+            <button class="btn
+                           btn__link
+                           m-pagination_submit-btn"
                     type="submit">
-                Go
+            Go
             </button>
+            {% endif -%}
         </form>
     </nav>
 {% endif %}
+{% endmacro %}
