--- a/cfgov/unprocessed/css/on-demand/pagination.less
+++ b/cfgov/unprocessed/css/on-demand/pagination.less
@@ -10,18 +10,10 @@
 
 // Import required CF components.
 // Combined CF components.
-// TODO: Base CF styles should be delivered to the /test-fixture/ path
-//       so that the secondary navigation renders correctly at that path.
-//       These reference imports are used to pick up the variables and mixins
-//       needed later on so that the secondary navigation can be delivered to
-//       fin-ed-resources and other non-v1 repos without duplicating
-//       Capital Framework in those repos
-//       (since it's delivered via the header already).
-@import (reference) 'cf-core/src/cf-core.less';
-@import (reference) 'cf-icons/src/cf-icons.less';
-@import (reference) 'cf-forms/src/cf-forms.less';
+@import (less) 'cf-core/src/cf-core.less';
+@import (less) 'cf-icons/src/cf-icons.less';
+@import (less) 'cf-buttons/src/cf-buttons.less';
 @import (reference) 'cf-layout/src/cf-layout.less';
-@import (reference) 'cf-typography/src/cf-typography.less';
 
 // The Capital Framework (CF) brand color palette.
 @import (reference) "../brand-palette.less";
@@ -36,6 +28,7 @@
 @import (less) "../enhancements/base.less";
 @import (less) "../enhancements/layout.less";
 
+
 /* Atom pieces
    ========================================================================== */
 
@@ -44,10 +37,4 @@
 /* Molecule pieces
    ========================================================================== */
 
-@import (less) "../organisms/expandable.less";
-@import (less) "../molecules/nav-link.less";
-
-/* Organism pieces
-   ========================================================================== */
-
-@import (less) "../organisms/secondary-navigation.less";
+@import (less) "../molecules/pagination.less";
